--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=StreamGAP
 spring.datasource.url=jdbc:mysql://localhost:3306/wweb_mussi
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=123123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,10 +9,11 @@ server.port=1010
 
 
 
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=thuandhde170652@fpt.edu.vn
-spring.mail.password=htodbnlrplbaqzbq
+spring.mail.username=thuandh30@gmail.com
+spring.mail.password=xrsrkqejmyrmewpb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
