--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=StreamGAP
-spring.datasource.url=jdbc:mysql://localhost:3306/wweb_mussi
-spring.datasource.username=root
-spring.datasource.password=123123
+spring.datasource.url=jdbc:mysql://mysql-17b8b401-thuandh30-beb2.f.aivencloud.com:17105/wweb_mussi
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_GGdTL2N1lOoCgizihGk
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
